<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014-2015 µg Project Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="nlp_app_name">µg UnifiedNlp</string>
    <string name="nlp_settings_label">µg UnifiedNlp Settings</string>
    <string name="add_backend">Add backend</string>
    <string name="configure_location_backends">Configure location backends</string>
    <string name="configure_geocoder_backends">Configure address lookup backends</string>
    <string name="network_location">Network-based Geolocation</string>
    <string name="geocoding">Address lookup</string>
    <string name="configure_backends">Configure backends</string>
    <string name="configure_location_backends_summary">
        Enable, disable and configure backends for network based geolocation.
    </string>
    <string name="configure_geocoder_backends_summary">
        Enable, disable and configure backends for address lookup.
    </string>
    <string name="pref_location_backends">location_backends</string>
    <string name="pref_geocoder_backends">geocoder_backends</string>
    <string name="perm_force_coarse_location_label">enforce approximate location</string>
    <string name="perm_force_coarse_location_desc">Force the network-based location provider to report a certain location</string>
</resources>
